[package]
name = "wasm-embedded-rt-wasmtime"
description = "Embedded WASM wasmtime Runtime"
repository = "https://github.com/embedded-wasm/rt-wasmtime"
authors = [
  "Ryan Kurte <ryan@kurte.nz>"
]
license = "MPL-2.0"
version = "0.4.0"
edition = "2021"

[features]
std = []

default = [ "std" ]

[dependencies]
log = { version = "0.4.14", default_features = false }
embedded-hal = "1.0.0-alpha.8"
anyhow = "1.0.52"

wiggle = { version = "3.0.0" }
wasmtime = { version = "3.0.0" }
wasmtime-wasi = { version = "3.0.0" }

[dependencies.wasm-embedded-spec]
version = "0.4.0"
default_features = false
features = [ "std", "bind_rs" ]
